<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/three_hundred_dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="@dimen/ten_dp"
        android:text="@string/enter_store_detail"
        android:textColor="@android:color/white"
        android:textSize="@dimen/twenty_sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp"
        android:layout_marginBottom="@dimen/five_dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/store_name"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/storeNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/five_dp"
            android:layout_marginEnd="@dimen/five_dp"
            android:background="@drawable/style_border"
            android:padding="@dimen/ten_dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp"
        android:layout_marginBottom="@dimen/five_dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/five_dp"
            android:text="@string/store_address"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fourteen_sp" />

        <EditText
            android:id="@+id/etStoreAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/five_dp"
            android:layout_marginEnd="@dimen/five_dp"
            android:background="@drawable/style_border"
            android:padding="@dimen/ten_dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginBottom="@dimen/ten_dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaveStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/style_button"
            android:layout_marginEnd="@dimen/ten_dp"
            android:paddingStart="@dimen/ten_dp"
            android:paddingEnd="@dimen/ten_dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:paddingStart="@dimen/ten_dp"
            android:paddingEnd="@dimen/ten_dp"
            android:background="@drawable/style_button"
            android:text="@string/cancel" />


    </LinearLayout>



</LinearLayout>