<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Header -->
    <TextView
        android:id="@+id/headerTvCreateProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="@dimen/ten_dp"
        android:text="@string/create_product"
        android:textColor="@android:color/white"
        android:textSize="@dimen/twenty_sp" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- ID Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/five_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/five_dp"
                    android:text="@string/product_id"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fourteen_sp" />

                <EditText
                    android:id="@+id/etProductId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/five_dp"
                    android:layout_marginEnd="@dimen/five_dp"
                    android:background="@drawable/style_border"
                    android:inputType="number"
                    android:padding="@dimen/ten_dp" />

            </LinearLayout>

            <!-- Name Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/five_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/five_dp"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fourteen_sp" />

                <EditText
                    android:id="@+id/etProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/five_dp"
                    android:layout_marginEnd="@dimen/five_dp"
                    android:background="@drawable/style_border"
                    android:inputType="text"
                    android:padding="@dimen/ten_dp" />

            </LinearLayout>

            <!-- Description Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/five_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/five_dp"
                    android:text="@string/description"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fourteen_sp" />

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/five_dp"
                    android:layout_marginEnd="@dimen/five_dp"
                    android:background="@drawable/style_border"
                    android:inputType="text"
                    android:padding="@dimen/ten_dp" />

            </LinearLayout>


            <!-- Regular Price-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/five_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/five_dp"
                    android:text="@string/regular_price"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fourteen_sp" />

                <EditText
                    android:id="@+id/etRegularPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/five_dp"
                    android:layout_marginEnd="@dimen/five_dp"
                    android:background="@drawable/style_border"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/ten_dp" />

            </LinearLayout>


            <!-- Sale Price-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/five_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/five_dp"
                    android:text="@string/sale_price"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fourteen_sp" />

                <EditText
                    android:id="@+id/etSalePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/five_dp"
                    android:layout_marginEnd="@dimen/five_dp"
                    android:background="@drawable/style_border"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/ten_dp" />

            </LinearLayout>


            <!-- Select Color -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/five_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/five_dp"
                    android:text="@string/add_colors"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fourteen_sp" />

                <Spinner
                    android:id="@+id/spinnerColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/five_dp"
                    android:layout_marginEnd="@dimen/five_dp"
                    android:background="@drawable/style_border"
                    android:padding="@dimen/five_dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/five_dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five_dp"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/five_dp"
                        android:text="@string/add_stores"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/fourteen_sp" />

                    <ImageView
                        android:id="@+id/addStoreImageView"
                        android:layout_width="@dimen/twenty_five_dp"
                        android:layout_height="@dimen/twenty_five_dp"
                        android:background="@drawable/add_purple" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tvAddedStores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/five_dp"
                    android:layout_marginEnd="@dimen/five_dp"
                    android:background="@drawable/style_border"
                    android:padding="@dimen/ten_dp"
                    android:text="" />


            </LinearLayout>

            <!-- Product photo -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/five_dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/five_dp"
                    android:text="@string/product_photo"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fourteen_sp" />

                <ImageView
                    android:id="@+id/ivProduct"
                    android:layout_width="@dimen/seventy_five_dp"
                    android:layout_height="@dimen/hundred_dp"
                    android:background="@drawable/style_border"
                    android:padding="@dimen/ten_dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:gravity="center"
                    android:padding="@dimen/five_dp"
                    android:text="@string/click_above_to_pick_image"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/ten_sp" />


            </LinearLayout>

            <!-- Button Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginBottom="@dimen/ten_dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnInsertData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/ten_dp"
                    android:background="@drawable/style_button"
                    android:paddingStart="@dimen/ten_dp"
                    android:paddingEnd="@dimen/ten_dp"
                    android:text="@string/insert_product"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_button"
                    android:paddingStart="@dimen/ten_dp"
                    android:paddingEnd="@dimen/ten_dp"
                    android:text="@string/reset"
                    android:textColor="@android:color/white" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>